# cubek

./: .gitignore  Cargo.toml  GUIDE.md  README.md  cubek.toml
benchmarks/: Cargo.toml
benchmarks/benches/: attention.rs  contiguous.rs  conv2d.rs  fft.rs  gemm.rs  gemv.rs  matmul.rs  memcpy_async.rs  quantized_matmul.rs  reduce.rs  unary.rs  vec2mat.rs  vecmat.rs
benchmarks/src/: attention.rs  lib.rs  registry.rs
benchmarks/src/attention/: benchmark.rs  correctness.rs  mod.rs  problem.rs  strategy.rs
benchmarks/src/contiguous/: benchmark.rs  mod.rs  problem.rs  strategy.rs
benchmarks/src/conv2d/: benchmark.rs  correctness.rs  mod.rs  problem.rs  strategy.rs
benchmarks/src/fft/: benchmark.rs  correctness.rs  mod.rs  problem.rs  strategy.rs
benchmarks/src/gemm/: benchmark.rs  mod.rs  problem.rs  strategy.rs
benchmarks/src/gemv/: benchmark.rs  correctness.rs  mod.rs  problem.rs  strategy.rs
benchmarks/src/memcpy_async/: benchmark.rs  mod.rs  problem.rs  strategy.rs
benchmarks/src/quantized_matmul/: benchmark.rs  mod.rs  problem.rs  strategy.rs
benchmarks/src/reduce/: benchmark.rs  correctness.rs  mod.rs  problem.rs  strategy.rs
benchmarks/src/unary/: benchmark.rs  mod.rs  problem.rs  strategy.rs
crates/cubek-convolution/: Cargo.toml
crates/cubek-convolution/src/: cpu_reference.rs  lib.rs
crates/cubek-convolution/src/components/: config.rs  mod.rs  problem.rs  selection.rs
crates/cubek-convolution/src/components/global/: args.rs
crates/cubek-convolution/src/components/stage/: bias_stage.rs  reader.rs
crates/cubek-convolution/src/definition/: blueprint.rs
crates/cubek-convolution/src/kernels/: mod.rs
crates/cubek-convolution/src/kernels/algorithm/: mod.rs  simple.rs  specialized.rs
crates/cubek-convolution/src/kernels/backward_data/: args.rs  launch.rs  mod.rs
crates/cubek-convolution/src/kernels/backward_weight/: args.rs  launch.rs
crates/cubek-convolution/src/kernels/forward/: args.rs  launch.rs
crates/cubek-convolution/src/launch/: base.rs  inputs.rs  mod.rs  strategy.rs
crates/cubek-convolution/src/routines/: base.rs  mod.rs  simple.rs  specialized.rs
crates/cubek-convolution/tests/suite/: convolution_test_launcher.rs  launcher_strategy.rs  mod.rs  reference.rs  test_utils.rs
crates/cubek-convolution/tests/suite/basic/: common.rs  mod.rs  simple_async.rs  simple_cyclic.rs  simple_strided.rs  simple_tilewise.rs  specialized_tma.rs  tma.rs
crates/cubek-convolution/tests/suite/extended/: advanced.rs  alt_shapes.rs  common.rs  mod.rs  tiling_scheme.rs
crates/cubek-convolution/tests/suite/full/: launch.rs  mod.rs
crates/cubek-convolution/tests/suite/test_macros/: suite.rs
crates/cubek-fft/: Cargo.toml
crates/cubek-fft/src/: cpu_reference.rs  layout.rs  lib.rs
crates/cubek-fft/src/fft/: fft_inner.rs  irfft.rs  mod.rs  rfft.rs
crates/cubek-fft/tests/suite/: fft_round_trip.rs  irfft.rs  mod.rs  reference.rs  rfft.rs
crates/cubek-linalg/: Cargo.toml
crates/cubek-linalg/src/: lib.rs
crates/cubek-linalg/src/qr/: baht.rs  baht_tsqr.rs  base.rs  cgr.rs  error.rs  mod.rs  solve.rs
crates/cubek-linalg/tests/suite/: cgr.rs  house.rs  mod.rs  utils.rs
crates/cubek-linalg/tests/suite/qr/: cgr.rs  house.rs  mod.rs  solve.rs
crates/cubek-matmul/: Cargo.toml
crates/cubek-matmul/src/components/: mod.rs  resource.rs
crates/cubek-matmul/src/components/batch/: base.rs  layout.rs  mod.rs
crates/cubek-matmul/src/components/global/: base.rs  shared.rs
crates/cubek-matmul/src/components/stage/: base.rs  filled.rs
crates/cubek-matmul/src/components/tile/: base.rs  config.rs  io.rs  matmul.rs  mod.rs  setup.rs
crates/cubek-matmul/src/components/tile_matmul/: base.rs  config.rs  matmul.rs  mod.rs  setup.rs
crates/cubek-matmul/src/definition/: base.rs  blueprint.rs  cube_mapping.rs  error.rs  line_size.rs  mod.rs  spec.rs  tiling_scheme.rs  vectorization.rs
crates/cubek-matmul/src/launch/: args.rs  base.rs  handle.rs  launch_naive.rs  launch_nostage_vecmat.rs  launch_tiling.rs  launch_vec2mat.rs  launch_vecmat_plane_parallel.rs  launch_vecmat_unit_perpendicular.rs  mod.rs  select_kernel.rs  strategy.rs  test_only.rs  tune_key.rs
crates/cubek-matmul/src/routines/: base.rs  double_buffering.rs  double_unit.rs  interleaved.rs  mod.rs  naive.rs  nostage_vecmat.rs  ordered_double_buffering.rs  simple.rs  simple_unit.rs  specialized.rs  vec2mat.rs  vecmat.rs  vecmat_innerproduct.rs  vecmat_plane_parallel.rs  vecmat_unit_perpendicular.rs
crates/cubek-matmul/src/routines/selector/: base.rs  mod.rs  plane.rs  unit.rs
crates/cubek-matmul/tests/suite/: bias.rs  launcher.rs  launcher_routine.rs  launcher_strategy.rs  mod.rs  quantization.rs  reference.rs
crates/cubek-matmul/tests/suite/basic/: auto.rs  gemv.rs  (+3 more)
crates/cubek-quant/: Cargo.toml
crates/cubek-quant/src/: dequantize.rs  quantize.rs
crates/cubek-quant/src/layout/: scales.rs
crates/cubek-quant/tests/suite/: mod.rs  symmetric.rs
crates/cubek-random/: Cargo.toml
crates/cubek-random/src/: base.rs  bernoulli.rs  normal.rs  uniform.rs
crates/cubek-random/tests/suite/: bernoulli.rs  interval.rs  normal.rs  uniform.rs
crates/cubek-std/: Cargo.toml
crates/cubek-std/src/: cube_dim_resource.rs  error.rs  input_binding.rs  lib.rs  matrix_layout.rs  size.rs  stage_ident.rs
crates/cubek-std/src/cube_count/: mod.rs  spread.rs
crates/cubek-std/src/stage/: mod.rs
crates/cubek-std/src/tile/: mod.rs  scope.rs  strided_tile.rs  tile_kind.rs
crates/cubek-std/tests/: lib.rs
crates/cubek-std/tests/mma/: mod.rs
crates/cubek-test-utils/: Cargo.toml  README.md
crates/cubek-test-utils/src/: config.rs  lib.rs
crates/cubek-test-utils/src/correctness/: base.rs  color_printer.rs  mod.rs  print_tensor.rs  render.rs
crates/cubek-test-utils/src/test_mode/: base.rs  result.rs
crates/cubek-test-utils/src/test_tensor/: arange.rs  base.rs  cast.rs  custom.rs  eye.rs  host_data.rs  mod.rs  quant.rs  random.rs  strides.rs
crates/cubek-test-utils/tests/: lib.rs
crates/cubek-test-utils/tests/utils_suite/: mod.rs
xtask/: Cargo.toml
xtask/src/commands/: test.rs
(+516 files in other folders)
