[workspace]
# Try
# require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = ["crates/*", "xtask", "benchmarks"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.92"
version = "0.2.0-pre.3"

[workspace.dependencies]
### For local development. ###
# cubecl = { path = "../cubecl/crates/cubecl", default-features = false }
# cubecl-common = { path = "../cubecl/crates/cubecl-common", default-features = false }

### For the main cubek branch. ###
# cubecl = { git = "https://github.com/tracel-ai/cubecl", rev = "fecdcea2e272a09cb7ccb326a0ef40922d12e614", default-features = false }
# cubecl-common = { git = "https://github.com/tracel-ai/cubecl", rev = "fecdcea2e272a09cb7ccb326a0ef40922d12e614", default-features = false }

### For releases ###
cubecl = { version = "=0.10.0-pre.3", default-features = false }
cubecl-common = { version = "=0.10.0-pre.3", default-features = false }

derive-new = { version = "0.7.0", default-features = false }
log = { default-features = false, version = "0.4.22" }

serde = { version = "1.0.204", default-features = false, features = [
    "derive",
    "alloc",
] } # alloc is for no_std, derive is needed

rand = { version = "0.10.0", default-features = false, features = [
    "std_rng",
] } # std_rng is for no_std

# Testing
rstest = "0.26"

bytemuck = "1.16.1"
half = { version = "2.5", features = [
    "alloc",
    "num-traits",
    "serde",
], default-features = false }
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] } # libm is for no_std

enumset = { version = "1.1.10", default-features = false }
thiserror = { version = "2", default-features = false }

### For xtask crate ###
strum = { version = "0.28", features = ["derive"] }
tracel-xtask = { version = "4.8" }

pretty_assertions = "1.4"

[profile.dev]
debug = 1     # Speed up compilation time and not necessary.
opt-level = 0

[profile.dev.build-override]
opt-level = 3
