[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com>",
]
categories = ["science", "mathematics", "algorithms"]
description = "CubeK: Benchmarks"
edition.workspace = true
keywords = []
license.workspace = true
name = "benchmarks"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubek"
version.workspace = true

[features]
# Pulls in each kernel crate's `cpu-reference` feature so categories can return
# CPU-reference HostData via `BenchmarkCategory::reference_result`. The umbrella
# `cubek` crate doesn't re-expose `cpu-reference` today, so consumers that need
# the correctness flow turn it on here and pick up the optional direct deps.
cpu-reference = [
    "dep:cubek-matmul",
    "dep:cubek-attention",
    "dep:cubek-convolution",
    "dep:cubek-fft",
    "dep:cubek-reduce",
]

[lib]
path = "src/lib.rs"

[dependencies]
cubecl = { workspace = true, features = ["test-runtime", "stdlib"] }
cubek = { path = "../crates/cubek", version = "=0.2.0-pre.4", default-features = false, features = [
    "stdlib",
    "random",
    "reduce",
    "matmul",
    "convolution",
    "attention",
    "fft",
    "quantization",
] }
cubek-matmul = { path = "../crates/cubek-matmul", version = "=0.2.0-pre.4", features = [
    "cpu-reference",
], optional = true }
cubek-attention = { path = "../crates/cubek-attention", version = "=0.2.0-pre.4", features = [
    "cpu-reference",
], optional = true }
cubek-convolution = { path = "../crates/cubek-convolution", version = "=0.2.0-pre.4", features = [
    "cpu-reference",
], optional = true }
cubek-fft = { path = "../crates/cubek-fft", version = "=0.2.0-pre.4", features = [
    "cpu-reference",
], optional = true }
cubek-reduce = { path = "../crates/cubek-reduce", version = "=0.2.0-pre.4", features = [
    "cpu-reference",
], optional = true }
cubek-test-utils = { path = "../crates/cubek-test-utils", version = "=0.2.0-pre.4" }
half = { workspace = true }

[[bench]]
harness = false
name = "gemm"

[[bench]]
harness = false
name = "gemv"

[[bench]]
harness = false
name = "reduce"

[[bench]]
harness = false
name = "conv2d"

[[bench]]
harness = false
name = "memcpy_async"

[[bench]]
harness = false
name = "unary"

[[bench]]
harness = false
name = "attention"

[[bench]]
harness = false
name = "contiguous"

[[bench]]
harness = false
name = "fft"

[[bench]]
harness = false
name = "quantized_matmul"
