[package]
name = "xtask"
version = "0.2.0-pre.4"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
strum = { workspace = true }
tracel-xtask = { workspace = true }
glob = "0.3.1"

[dev-dependencies]
rstest = { workspace = true }
