[package]
authors = ["Genna Wingert", "louisfd <louisfd94@gmail.com>"]
categories = ["science", "mathematics", "algorithms"]
description = "CubeK: Convolution Kernels"
edition.workspace = true
keywords = []
license.workspace = true
name = "cubek-convolution"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubek/tree/main/crates/cubek-convolution"
version.workspace = true

[features]
default = ["std", "cubecl/default"]
std = ["cubecl/std"]

basic = []
extended = ["basic"]
full = ["extended"]


[dependencies]
cubecl = { workspace = true, features = ["stdlib"] }
cubecl-common = { workspace = true }
cubek-matmul = { path = "../cubek-matmul", default-features = false, version = "=0.2.0-pre.3" }
cubek-std = { path = "../cubek-std", default-features = false, version = "=0.2.0-pre.3" }
derive-new = { workspace = true }

bytemuck = { workspace = true }
enumset = { workspace = true }
half = { workspace = true, features = ["bytemuck"] }
serde = { workspace = true }

[dev-dependencies]
cubecl = { workspace = true, features = ["test-runtime"] }
cubek-test-utils = { path = "../cubek-test-utils", version = "=0.2.0-pre.3", default-features = false }
pretty_assertions = { workspace = true }
trybuild = "1"
