[package]
authors = ["Sublime12", "louisfd"]
categories = ["science", "mathematics", "algorithms"]
description = "CubeK: Fast Fourier Transform"
edition.workspace = true
keywords = []
license.workspace = true
name = "cubek-fft"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubek/tree/main/crates/cubek-fft"
version.workspace = true

[features]
default = ["std", "cubecl/default"]
std = ["cubecl/std"]

heavy = []
extended = ["heavy"]
full = ["extended"]

cpu-reference = ["dep:num-complex", "dep:cubek-test-utils"]

[dependencies]
cubecl = { workspace = true }
cubek-test-utils = { path = "./../cubek-test-utils/", version = "=0.2.0-pre.4", default-features = false, optional = true }
num-complex = { version = "0.4.6", optional = true }

[dev-dependencies]
num-complex = "0.4.6"
cubecl = { workspace = true, features = ["test-runtime"] }
cubecl-common = { workspace = true }
cubek-fft = { path = ".", features = ["cpu-reference"] }
cubek-test-utils = { path = "./../cubek-test-utils/", version = "=0.2.0-pre.4", default-features = false }
