[package]
authors = [
    "Jorge Perez Burgos <vaijira@gmail.com>",
]
categories = ["science", "mathematics", "algorithms"]
description = "CubeK: Linear Algebra Kernels"
edition.workspace = true
keywords = []
license.workspace = true
name = "cubek-linalg"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubek/tree/main/crates/cubek-linalg"
version.workspace = true

[features]
default = ["std", "cubecl/default"]
std = ["cubecl/std", "thiserror/std"]

[dependencies]
cubecl = { workspace = true, features = ["stdlib"] }
cubecl-common = { workspace = true }
cubek-std = { path = "../cubek-std", version = "=0.2.0-pre.3", default-features = false }

num-traits = { workspace = true }
pretty_assertions = { workspace = true, optional = true }
serde = { workspace = true }
half = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
cubecl = { workspace = true, features = ["test-runtime"] }
cubecl-common = { workspace = true }
cubek-matmul = { path = "../cubek-matmul", version = "=0.2.0-pre.3", default-features = false }
rand = { workspace = true }
paste = "1.0"
