[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science", "mathematics", "algorithms"]
description = "CubeK: Random Number Generation"
edition.workspace = true
keywords = []
license.workspace = true
name = "cubek-random"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubek/tree/main/crates/cubek-random"
version.workspace = true

[features]
default = ["std", "cubecl/default"]
std = ["cubecl/std"]

full = ["extended"]
extended = []

[dependencies]
cubecl = { workspace = true }
cubecl-common = { workspace = true }
num-traits = "0.2.19"
pretty_assertions = { workspace = true, optional = true }
rand = { workspace = true }
serde = { workspace = true }
half = { workspace = true }

[dev-dependencies]
cubecl = { workspace = true, features = ["test-runtime"] }
