[package]
authors = ["louisfd <louisfd94@gmail.com>"]
description = "CubeK: Standard Library"
edition.workspace = true
license.workspace = true
name = "cubek-std"
readme.workspace = true
rust-version.workspace = true
repository = "https://github.com/tracel-ai/cubek/tree/main/crates/cubek-std"
version.workspace = true

[features]
default = ["cubecl/default"]
std = ["cubecl/std"]

[dependencies]
cubecl = { workspace = true, features = ["stdlib"] }
cubecl-common = { workspace = true }
half = { workspace = true, features = ["bytemuck"] }

[dev-dependencies]
cubek-test-utils = { path = "../cubek-test-utils", version = "=0.2.0-pre.2", default-features = false }
