[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com>",
]
description = "CubeK: Test Utils"
edition.workspace = true
license.workspace = true
name = "cubek-test-utils"
readme.workspace = true
rust-version.workspace = true
repository = "https://github.com/tracel-ai/cubek/tree/main/crates/cubek-test-utils"
version.workspace = true

[features]
default = ["cubecl/default"]
std = ["cubecl/std"]

basic = []
extended = ["basic"]
full = ["extended"]

[dependencies]
cubek-random = { path = "../cubek-random", version = "=0.2.0-pre.3", default-features = false }
cubek-quant = { path = "../cubek-quant", version = "=0.2.0-pre.3" }

bytemuck = { workspace = true }
cubecl = { workspace = true, features = ["stdlib", "test-runtime"] }
cubecl-common = { workspace = true }
half = { workspace = true, features = ["bytemuck"] }
serde = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
trybuild = "1"
